Bug 1141255: Prevent debugger from modifying unaliased const bindings. r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D158402